--- a/roles/win_ad_install/vars/main.yml
+++ b/roles/win_ad_install/vars/main.yml
@@ -1,4 +1,5 @@
-ad_domain_name: ad1.${guid}.example.opentlc.com
+GUID: 3504
+ad_domain_name: ad1.{{GUID}}.example.opentlc.com
 ad_safe_mode_password: "{{ansible_password}}"
 ad_admin_user: "admin@{{ ad_domain_name}}"
 ad_admin_password: "{{ansible_password}}"
