single package name

--- a/roles/win_service_config/tasks/main.yml
+++ b/roles/win_service_config/tasks/main.yml
@@ -1,10 +1,9 @@
 ---
 - name: Install multiple packages
   win_chocolatey:
-    name: '{{ item }}'
+    name: "{{ package_name }}"
     state: present
     params: "{{ parameters }}"
-  loop: "{{ package_name }}"
   when: ansible_distribution == "Microsoft Windows Server 2012 R2 Standard"
 
 - name: Enable Windows Service
