--- a/roles/win_ad_user/tasks/main.yml
+++ b/roles/win_ad_user/tasks/main.yml
@@ -13,6 +13,5 @@
     surname: "{{item.surname}}"
     password: "{{item.password}}"
     state: present
-    groups:
-      - "{{item.group_name}}"
+    groups: "{{item.group_name}}"
   loop: "{{user_info}}"
